fix(tests): Update player repository to use interface and improve assertions